--- a/fba/jupyter_notebooks/1_QC_template.ipynb
+++ b/fba/jupyter_notebooks/1_QC_template.ipynb
@@ -35,7 +35,7 @@
     "import os\n",
     "\n",
     "# CHANGE THIS VARIABLE TO REFLECT WHERE YOUR HBN BIDS DATA LIVE ()\n",
-    "bids_dir = '/om4/group/gablab/data/hbn_bids/' # Path should end with a '/'\n",
+    "bids_dir = '/PATH/TO/HBN_BIDS_ROOT' # Path should end with a '/'\n",
     "\n",
     "qc_thresh = .5 # Any subject with an image QC prediction lower than this is excluded\n",
     "\n",
