--- a/fba/jupyter_notebooks/2_manualQC2.ipynb
+++ b/fba/jupyter_notebooks/2_manualQC2.ipynb
@@ -26,7 +26,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "bids_dir = '/om4/group/gablab/data/hbn_bids/'\n",
+    "bids_dir = '/PATH/TO/HBN_BIDS_ROOT'\n",
     "qsiprep_dir = bids_dir+'derivatives/qsiprep_fba_subs/'\n",
     "fba_dir = bids_dir+'derivatives/fba/'\n",
     "out_variable_dir = os.getcwd()+'/output_variables/'"
