--- a/fba/jupyter_notebooks/4_phenotypic_figures.ipynb
+++ b/fba/jupyter_notebooks/4_phenotypic_figures.ipynb
@@ -19,7 +19,7 @@
     "from statannotations.Annotator import Annotator\n",
     "\n",
     "# CHANGE THIS VARIABLE TO REFLECT WHERE YOUR HBN BIDS DATA LIVE ()\n",
-    "bids_dir = '/om4/group/gablab/data/hbn_bids/' # Path should end with a '/'\n",
+    "bids_dir = '/PATH/TO/HBN_BIDS_ROOT' # Path should end with a '/'\n",
     "\n",
     "# THESE VARIABLES SHOULD NOT CHANGE IF THE ANALYSIS WAS RUN ACCORDING TO INSTRUCTIONS\n",
     "code_dir = bids_dir+'code/'\n",
