--- a/fba/jupyter_notebooks/3_make_df.ipynb
+++ b/fba/jupyter_notebooks/3_make_df.ipynb
@@ -12,10 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0f51675d-e6eb-4b57-9e73-1bf835b2cd39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/om2/user/smeisler/anaconda3/envs/nipype/lib/python3.8/site-packages/outdated/utils.py:14: OutdatedPackageWarning: The package pingouin is out of date. Your version is 0.5.1, the latest is 0.5.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n",
+      "/tmp/ipykernel_10023/2155067835.py:24: DtypeWarning: Columns (194) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  HBN_query = pd.read_csv(code_dir+'HBN_query.csv') # This should point to the phenotypic file downloaded from LORIS\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import pandas as pd\n",
@@ -29,7 +41,7 @@
     "import statistics\n",
     "\n",
     "# CHANGE THIS VARIABLE TO REFLECT WHERE YOUR HBN BIDS DATA LIVE ()\n",
-    "bids_dir = '/PATH/TO/HBN_BIDS_ROOT' # Path should end with a '/'\n",
+    "bids_dir = '/om4/group/gablab/data/hbn_bids/' # Path should end with a '/'\n",
     "\n",
     "# THESE VARIABLES SHOULD NOT CHANGE IF THE ANALYSIS WAS RUN ACCORDING TO INSTRUCTIONS\n",
     "code_dir = bids_dir+'code/'\n",
@@ -71,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "52d282aa",
    "metadata": {},
    "outputs": [],
@@ -89,12 +101,14 @@
     "    elif h >= -40 and h <= 40: hand.append('A')\n",
     "    elif h > 40: hand.append('R')\n",
     "\n",
-    "# Reading Measures\n",
+    "# Reading Measures (Standardized)\n",
     "towre = np.asarray(HBN_query['TOWRE,TOWRE_Total_Scaled'][query_inds_final]).astype(float)\n",
     "swe = np.asarray(HBN_query['TOWRE,TOWRE_SWE_Scaled'][query_inds_final]).astype(float)\n",
     "pde = np.asarray(HBN_query['TOWRE,TOWRE_PDE_Scaled'][query_inds_final]).astype(float)\n",
+    "# Raw Reading Measures\n",
     "swe_r = np.asarray(HBN_query['TOWRE,TOWRE_SWE_Raw'][query_inds_final]).astype(float)\n",
     "pde_r = np.asarray(HBN_query['TOWRE,TOWRE_PDE_Raw'][query_inds_final]).astype(float)\n",
+    "towre_r = swe_r + pde_r\n",
     "\n",
     "# Make RD and TR groups\n",
     "groups=[]\n",
@@ -128,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "39943290",
    "metadata": {},
    "outputs": [],
@@ -187,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7c67a53d",
    "metadata": {},
    "outputs": [],
@@ -205,6 +219,7 @@
     "df['PDE'] = pde\n",
     "df['SWE_RAW'] = swe_r\n",
     "df['PDE_RAW'] = pde_r\n",
+    "df['TOWRE_RAW'] = towre_r\n",
     "df['SES'] = ses\n",
     "df['WISC_VSI']=wisc_vsi\n",
     "df['WISC_VCI']=wisc_vci\n",
@@ -226,6 +241,378 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a89a2581-8670-4e4a-b919-7381a212199a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>GROUP</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EHI</th>\n",
+       "      <th>HAND</th>\n",
+       "      <th>TOWRE</th>\n",
+       "      <th>SWE</th>\n",
+       "      <th>PDE</th>\n",
+       "      <th>SWE_RAW</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WISC_VSI</th>\n",
+       "      <th>WISC_VCI</th>\n",
+       "      <th>ICV</th>\n",
+       "      <th>logICV</th>\n",
+       "      <th>gFD</th>\n",
+       "      <th>gFC</th>\n",
+       "      <th>gFDC</th>\n",
+       "      <th>MOTION</th>\n",
+       "      <th>N_CORR</th>\n",
+       "      <th>SITE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sub-NDARAA947ZG5</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>13.627880</td>\n",
+       "      <td>M</td>\n",
+       "      <td>80.00</td>\n",
+       "      <td>R</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1.683538e+06</td>\n",
+       "      <td>14.336408</td>\n",
+       "      <td>0.249560</td>\n",
+       "      <td>-0.002229</td>\n",
+       "      <td>0.254570</td>\n",
+       "      <td>0.812289</td>\n",
+       "      <td>0.617743</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sub-NDARAA948VFH</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>7.982660</td>\n",
+       "      <td>F</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>R</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>1.357012e+06</td>\n",
+       "      <td>14.120796</td>\n",
+       "      <td>0.305954</td>\n",
+       "      <td>-0.022630</td>\n",
+       "      <td>0.300181</td>\n",
+       "      <td>0.367211</td>\n",
+       "      <td>0.818152</td>\n",
+       "      <td>RU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sub-NDARAB708LM5</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>9.208532</td>\n",
+       "      <td>M</td>\n",
+       "      <td>33.35</td>\n",
+       "      <td>A</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1.833313e+06</td>\n",
+       "      <td>14.421635</td>\n",
+       "      <td>0.264511</td>\n",
+       "      <td>0.124419</td>\n",
+       "      <td>0.306069</td>\n",
+       "      <td>0.769198</td>\n",
+       "      <td>0.753416</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sub-NDARAC331VEH</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>14.167351</td>\n",
+       "      <td>M</td>\n",
+       "      <td>67.80</td>\n",
+       "      <td>R</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>1.563031e+06</td>\n",
+       "      <td>14.262138</td>\n",
+       "      <td>0.282996</td>\n",
+       "      <td>0.030885</td>\n",
+       "      <td>0.292144</td>\n",
+       "      <td>0.154693</td>\n",
+       "      <td>0.761416</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sub-NDARAC349YUC</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>10.051791</td>\n",
+       "      <td>F</td>\n",
+       "      <td>86.67</td>\n",
+       "      <td>R</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1.651895e+06</td>\n",
+       "      <td>14.317434</td>\n",
+       "      <td>0.267326</td>\n",
+       "      <td>0.067075</td>\n",
+       "      <td>0.284775</td>\n",
+       "      <td>0.386436</td>\n",
+       "      <td>0.686540</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>978</th>\n",
+       "      <td>sub-NDARZW619BDL</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>10.120123</td>\n",
+       "      <td>M</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>R</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>1.421000e+06</td>\n",
+       "      <td>14.166871</td>\n",
+       "      <td>0.292376</td>\n",
+       "      <td>-0.012170</td>\n",
+       "      <td>0.288109</td>\n",
+       "      <td>0.427320</td>\n",
+       "      <td>0.738410</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>979</th>\n",
+       "      <td>sub-NDARZW873DN3</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>13.436344</td>\n",
+       "      <td>F</td>\n",
+       "      <td>73.34</td>\n",
+       "      <td>R</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1.597672e+06</td>\n",
+       "      <td>14.284058</td>\n",
+       "      <td>0.307543</td>\n",
+       "      <td>0.129453</td>\n",
+       "      <td>0.358295</td>\n",
+       "      <td>0.283051</td>\n",
+       "      <td>0.709917</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>980</th>\n",
+       "      <td>sub-NDARZX163EWC</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>9.898471</td>\n",
+       "      <td>F</td>\n",
+       "      <td>46.67</td>\n",
+       "      <td>R</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.507703e+06</td>\n",
+       "      <td>14.226098</td>\n",
+       "      <td>0.290473</td>\n",
+       "      <td>0.028136</td>\n",
+       "      <td>0.297724</td>\n",
+       "      <td>0.172784</td>\n",
+       "      <td>0.758520</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>981</th>\n",
+       "      <td>sub-NDARZY101JNB</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>7.517111</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>1.519813e+06</td>\n",
+       "      <td>14.234098</td>\n",
+       "      <td>0.292752</td>\n",
+       "      <td>0.086046</td>\n",
+       "      <td>0.318926</td>\n",
+       "      <td>0.209331</td>\n",
+       "      <td>0.833693</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>982</th>\n",
+       "      <td>sub-NDARZZ810LVF</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>8.502623</td>\n",
+       "      <td>M</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>R</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>1.632785e+06</td>\n",
+       "      <td>14.305798</td>\n",
+       "      <td>0.291031</td>\n",
+       "      <td>0.087090</td>\n",
+       "      <td>0.318724</td>\n",
+       "      <td>0.507478</td>\n",
+       "      <td>0.735669</td>\n",
+       "      <td>CBIC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>983 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           subject_id  GROUP        AGE SEX     EHI HAND  TOWRE    SWE    PDE  \\\n",
+       "0    sub-NDARAA947ZG5     TR  13.627880   M   80.00    R  102.0  106.0   98.0   \n",
+       "1    sub-NDARAA948VFH     TR   7.982660   F   90.00    R  103.0  109.0   96.0   \n",
+       "2    sub-NDARAB708LM5  OTHER   9.208532   M   33.35    A   87.0  103.0   73.0   \n",
+       "3    sub-NDARAC331VEH     TR  14.167351   M   67.80    R  100.0   98.0  102.0   \n",
+       "4    sub-NDARAC349YUC     TR  10.051791   F   86.67    R  103.0  109.0   97.0   \n",
+       "..                ...    ...        ...  ..     ...  ...    ...    ...    ...   \n",
+       "978  sub-NDARZW619BDL     TR  10.120123   M  100.00    R  112.0  100.0  123.0   \n",
+       "979  sub-NDARZW873DN3  OTHER  13.436344   F   73.34    R   96.0  108.0   85.0   \n",
+       "980  sub-NDARZX163EWC     TR   9.898471   F   46.67    R  124.0  129.0  116.0   \n",
+       "981  sub-NDARZY101JNB     TR   7.517111   M   40.00    A   97.0  102.0   93.0   \n",
+       "982  sub-NDARZZ810LVF  OTHER   8.502623   M  100.00    R   94.0   98.0   90.0   \n",
+       "\n",
+       "     SWE_RAW  ...  WISC_VSI  WISC_VCI           ICV     logICV       gFD  \\\n",
+       "0       85.0  ...      84.0      92.0  1.683538e+06  14.336408  0.249560   \n",
+       "1       63.0  ...      94.0     111.0  1.357012e+06  14.120796  0.305954   \n",
+       "2       71.0  ...     117.0      92.0  1.833313e+06  14.421635  0.264511   \n",
+       "3       82.0  ...     129.0     121.0  1.563031e+06  14.262138  0.282996   \n",
+       "4       77.0  ...      89.0      98.0  1.651895e+06  14.317434  0.267326   \n",
+       "..       ...  ...       ...       ...           ...        ...       ...   \n",
+       "978     71.0  ...     108.0     106.0  1.421000e+06  14.166871  0.292376   \n",
+       "979     86.0  ...      81.0      98.0  1.597672e+06  14.284058  0.307543   \n",
+       "980     89.0  ...      94.0     100.0  1.507703e+06  14.226098  0.290473   \n",
+       "981     47.0  ...     111.0     116.0  1.519813e+06  14.234098  0.292752   \n",
+       "982     60.0  ...     114.0     108.0  1.632785e+06  14.305798  0.291031   \n",
+       "\n",
+       "          gFC      gFDC    MOTION    N_CORR  SITE  \n",
+       "0   -0.002229  0.254570  0.812289  0.617743  CBIC  \n",
+       "1   -0.022630  0.300181  0.367211  0.818152    RU  \n",
+       "2    0.124419  0.306069  0.769198  0.753416  CBIC  \n",
+       "3    0.030885  0.292144  0.154693  0.761416  CBIC  \n",
+       "4    0.067075  0.284775  0.386436  0.686540  CBIC  \n",
+       "..        ...       ...       ...       ...   ...  \n",
+       "978 -0.012170  0.288109  0.427320  0.738410  CBIC  \n",
+       "979  0.129453  0.358295  0.283051  0.709917  CBIC  \n",
+       "980  0.028136  0.297724  0.172784  0.758520  CBIC  \n",
+       "981  0.086046  0.318926  0.209331  0.833693  CBIC  \n",
+       "982  0.087090  0.318724  0.507478  0.735669  CBIC  \n",
+       "\n",
+       "[983 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "be25ddbc-0a4a-413d-9947-4864bd782ec7",
    "metadata": {},
@@ -235,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5f0f6dba-c847-4a37-b580-22e744b1876e",
    "metadata": {},
    "outputs": [],
